# ndai-hackathon

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  claudepad.md  deck.html  docker-compose.yml  dstack-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_recall_and_props_tables.py  b2c3d4e5f6a7_add_verification_data_columns.py  bc3c61b62789_initial.py  (+16 more)
contracts/: foundry.toml
demo/: __init__.py  health_check.py  seed_data.py  target_spec.py
demo/xz_backdoor/: README.md  (+8 more)
deploy/: docker-compose.yml  heartbeat.sh  launch.sh  ndai-ctl.sh  ndai.service  nginx-onion.conf  nginx.conf  setup.sh  smoke-test.sh  torrc
docs/: NITRO_VERIFICATION.md  SUBMIT_GUIDE.md  wet-test-results.md
enclave-build/: Dockerfile  build.sh
frontend/: esbuild.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend-zk/: esbuild.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
infra/: Caddyfile.shape  Caddyfile.zdayzk  deploy-ovh2.sh  deploy-zdayzk.sh  setup-ovh2.sh  setup-zdayzk.sh  trustkit.service  zdayzk.service
ndai/: __init__.py  config.py
ndai-seal/: ndai_seal.py  setup.py
scripts/: backend_check.py  demo_xz_backdoor.py  direct_nitro_test.py  full_nitro_onchain.py  inline_verify.py  live_test.py  ndai_submit.py  nitro_verify_test.py  update_targets.py  verify_live.py  vsock_test.py  wet_test.py
tests/: conftest.py
zdayzk-frontend/: esbuild.config.mjs  package-lock.json  package.json  tailwind.config.js
(+480 files in other folders)
